--- a/PoEHandbook/Pages/EquippableInfoPage.xaml
+++ b/PoEHandbook/Pages/EquippableInfoPage.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      SnapsToDevicePixels="True"
       d:DesignHeight="600"
       d:DesignWidth="600"
       mc:Ignorable="d">
@@ -84,10 +85,10 @@
                            TextAlignment="Center"
                            TextWrapping="Wrap" />
                 <Image x:Name="ImgItem"
-                       Height="199"
+                       Height="164"
                        Margin="10,0,10,10"
                        VerticalAlignment="Bottom" />
-                <Border Margin="5,230,5,223">
+                <Border Margin="5,230,5,186">
                     <TextBlock x:Name="TbMods"
                                VerticalAlignment="Center"
                                FontSize="16"
@@ -102,7 +103,7 @@
                            VerticalAlignment="Top"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <Rectangle Height="2"
-                           Margin="0,0,0,214"
+                           Margin="1,0,-1,179"
                            HorizontalAlignment="Stretch"
                            VerticalAlignment="Bottom"
                            Fill="{DynamicResource SeparatorGradient}" />
