--- a/PoEHandbook/Pages/MainPage.xaml
+++ b/PoEHandbook/Pages/MainPage.xaml
@@ -4,6 +4,7 @@
       xmlns:controls="clr-namespace:PoEHandbook.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      KeepAlive="True"
       Loaded="Page_Loaded"
       Unloaded="Page_Unloaded"
       d:DesignHeight="300"
