--- a/PoEHandbook/Controls/SearchResult.xaml
+++ b/PoEHandbook/Controls/SearchResult.xaml
@@ -6,6 +6,7 @@
              x:Name="This"
              Width="200"
              Height="300"
+             Margin="5"
              Loaded="UserControl_Loaded"
              MouseLeftButtonDown="MainGrid_MouseLeftButtonDown"
              SnapsToDevicePixels="True"
