--- a/PoEHandbook/Pages/EquippableInfoPage.xaml
+++ b/PoEHandbook/Pages/EquippableInfoPage.xaml
@@ -25,17 +25,15 @@
 
     <Grid Background="#FF0E0E0E">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="13*" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Button x:Name="BtnBack"
-                Width="25"
-                Height="47"
-                Margin="10,8,0,0"
-                HorizontalAlignment="Left"
+                Grid.Column="0"
+                Height="45"
+                Margin="10"
                 VerticalAlignment="Top"
-                Background="Transparent"
                 BorderThickness="0"
                 Click="BtnBack_Click"
                 Content="«"
