--- a/PoEHandbook/Pages/MainPage.xaml
+++ b/PoEHandbook/Pages/MainPage.xaml
@@ -13,71 +13,68 @@
       mc:Ignorable="d">
 
     <Grid Background="#FF0E0E0E" SnapsToDevicePixels="True">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Menu Margin="0"
+              Background="Transparent"
+              BorderThickness="0"
+              Foreground="White">
+            <MenuItem Header="Settings">
+                <MenuItem x:Name="CbShowImages"
+                          Background="#FF0E0E0E"
+                          BorderThickness="0"
+                          Click="CbShowImages_Click"
+                          Foreground="White"
+                          Header="Show Images"
+                          IsCheckable="True"
+                          IsChecked="{Binding Source={x:Static properties:Settings.Default},
+                                              Path=ShowImages}" />
+            </MenuItem>
+            <MenuItem Header="Actions">
+                <MenuItem x:Name="BtnIdentifyItem" Header="Identify Item" Click="BtnIdentifyItem_OnClick"/>
+            </MenuItem>
+        </Menu>
         <TextBox x:Name="TbQuery"
-                 Height="40"
-                 Margin="10,10,58,0"
+                 Grid.Row="1"
+                 Height="35"
+                 Margin="10,5,35,0"
                  VerticalAlignment="Top"
-                 Background="#FF0E0E0E"
+                 Background="Transparent"
                  BorderBrush="LightSlateGray"
+                 CaretBrush="White"
                  FontSize="22"
                  Foreground="White"
                  Text=""
                  TextChanged="TbQuery_TextChanged"
                  TextWrapping="Wrap" />
         <Button x:Name="BtnClear"
-                Width="19"
-                Height="40"
-                Margin="0,10,34,0"
+                Grid.Row="1"
+                Width="25"
+                Height="35"
+                Margin="0,5,10,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
-                BorderThickness="0"
+                BorderBrush="LightSlateGray"
+                BorderThickness="1"
                 Click="BtnClear_Click"
                 Content="✖"
                 Foreground="White"
                 KeyboardNavigation.IsTabStop="False" />
-        <Button x:Name="BtnOptions"
-                Width="19"
-                Height="40"
-                Margin="0,10,10,0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                BorderThickness="0"
-                Click="BtnOptions_Click"
-                Content="…"
-                Foreground="White"
-                KeyboardNavigation.IsTabStop="False" />
-        <Border Margin="10,55,10,31"
+        <Border Grid.Row="1"
+                Margin="10,45,10,30"
                 BorderBrush="LightSlateGray"
-                BorderThickness="1">
+                BorderThickness="1"
+                CornerRadius="3">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                 <controls:AlignableWrapPanel x:Name="PnlResults"
                                              HorizontalContentAlignment="Center"
                                              KeyboardNavigation.IsTabStop="False" />
             </ScrollViewer>
         </Border>
-        <Menu x:Name="MenuOptions"
-              Width="162"
-              Height="43"
-              Margin="0,50,10,0"
-              HorizontalAlignment="Right"
-              VerticalAlignment="Top"
-              HorizontalContentAlignment="Stretch"
-              Background="#FF0E0E0E"
-              BorderBrush="LightSlateGray"
-              BorderThickness="1"
-              MouseLeave="MenuOptions_MouseLeave"
-              Visibility="Hidden">
-            <CheckBox x:Name="CbShowImages"
-                      Width="{Binding ElementName=MenuOptions,
-                                      Path=ActualWidth}"
-                      HorizontalAlignment="Stretch"
-                      Click="CbShowImages_Click"
-                      Content="Show Images"
-                      Foreground="White"
-                      IsChecked="{Binding Source={x:Static properties:Settings.Default},
-                                          Path=ShowImages}" />
-        </Menu>
         <TextBlock x:Name="TbStatus"
+                   Grid.Row="1"
                    Width="Auto"
                    Height="16"
                    Margin="10,0,0,10"
@@ -93,6 +90,7 @@
             </TextBlock.Inlines>
         </TextBlock>
         <TextBlock x:Name="TbCredits"
+                   Grid.Row="1"
                    Width="Auto"
                    Height="16"
                    Margin="0,0,10,10"
