Implemented support for currency and added corresponding XML file.
Also upgraded placeholders for other entity types. You can also now search  by entity type, e.g. "currency" or "equipment".

--- a/PoEHandbook/Controls/SearchResult.xaml
+++ b/PoEHandbook/Controls/SearchResult.xaml
@@ -57,7 +57,7 @@
             <Grid x:Name="ImageGrid" Grid.Row="1">
                 <Image x:Name="ItemImage"
                        Margin="10"
-                       Stretch="None" />
+                       Stretch="Uniform" />
                 <Rectangle Height="2"
                            HorizontalAlignment="Stretch"
                            VerticalAlignment="Bottom"
