--- a/PoEHandbook/Pages/InfoPage.xaml
+++ b/PoEHandbook/Pages/InfoPage.xaml
@@ -45,18 +45,13 @@
         <Border Grid.Column="1"
                 MaxWidth="500"
                 MaxHeight="700"
+                VerticalAlignment="Center"
                 Background="Black"
                 BorderBrush="{DynamicResource AccentBrush}"
                 BorderThickness="2">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="90" />
-                    <RowDefinition Height="90" />
-                    <RowDefinition Height="35" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="175" />
-                </Grid.RowDefinitions>
-                <Border Margin="1"
+            <StackPanel>
+                <Border Height="80"
+                        Margin="1, 1, 1, 5"
                         Background="{DynamicResource TitleGradient}"
                         BorderBrush="{DynamicResource AccentBrush}"
                         BorderThickness="2">
@@ -68,58 +63,62 @@
                                TextAlignment="Center"
                                TextTrimming="CharacterEllipsis" />
                 </Border>
-                <Border Grid.Row="1" Margin="5">
-                    <TextBlock x:Name="TbStats"
-                               VerticalAlignment="Center"
-                               FontSize="16"
-                               Foreground="LightGray"
-                               Text="Stats"
-                               TextAlignment="Center"
-                               TextTrimming="CharacterEllipsis"
-                               TextWrapping="Wrap" />
-                </Border>
-                <Rectangle Grid.Row="1"
+                <TextBlock x:Name="TbStats"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Foreground="#FFB9B9B9"
+                           Text="Stats"
+                           TextAlignment="Center"
+                           TextTrimming="CharacterEllipsis"
+                           TextWrapping="Wrap" />
+                <Rectangle x:Name="RectSeparator1"
                            Height="2"
+                           Margin="5"
                            HorizontalAlignment="Stretch"
-                           VerticalAlignment="Bottom"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <TextBlock x:Name="TbRequiremenets"
-                           Grid.Row="2"
                            Margin="5"
                            FontSize="16"
-                           Foreground="LightGray"
+                           Foreground="#FFB9B9B9"
                            Text="Requirements"
                            TextAlignment="Center"
                            TextTrimming="CharacterEllipsis"
                            TextWrapping="Wrap" />
-                <Rectangle Grid.Row="2"
+                <Rectangle x:Name="RectSeparator2"
                            Height="2"
+                           Margin="5"
                            HorizontalAlignment="Stretch"
-                           VerticalAlignment="Bottom"
                            Fill="{DynamicResource SeparatorGradient}" />
-                <Border Grid.Row="3" Margin="5">
-                    <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                        <TextBlock x:Name="TbMods"
-                                   VerticalAlignment="Center"
-                                   FontSize="16"
-                                   Foreground="#6a88ef"
-                                   Text="Mods"
-                                   TextAlignment="Center"
-                                   TextTrimming="CharacterEllipsis"
-                                   TextWrapping="Wrap" />
-                    </ScrollViewer>
-                </Border>
-                <Rectangle Grid.Row="3"
+                <TextBlock x:Name="TbImplicitMod"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Foreground="#6a88ef"
+                           Text="Implicit Mod"
+                           TextAlignment="Center"
+                           TextTrimming="CharacterEllipsis"
+                           TextWrapping="Wrap" />
+                <Rectangle x:Name="RectSeparator3"
                            Height="2"
+                           Margin="5"
                            HorizontalAlignment="Stretch"
-                           VerticalAlignment="Bottom"
+                           Fill="{DynamicResource SeparatorGradient}" />
+                <TextBlock x:Name="TbMods"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Foreground="#6a88ef"
+                           Text="Mods"
+                           TextAlignment="Center"
+                           TextTrimming="CharacterEllipsis"
+                           TextWrapping="Wrap" />
+                <Rectangle x:Name="RectSeparator4"
+                           Height="2"
+                           Margin="5"
+                           HorizontalAlignment="Stretch"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <Image x:Name="ImgItem"
-                       Grid.Row="4"
-                       Height="164"
                        Margin="5"
-                       VerticalAlignment="Bottom" />
-            </Grid>
+                       StretchDirection="DownOnly" />
+            </StackPanel>
         </Border>
     </Grid>
 </Page>
