--- a/PoEHandbook/Pages/InfoPage.xaml
+++ b/PoEHandbook/Pages/InfoPage.xaml
@@ -63,6 +63,7 @@
                                TextTrimming="CharacterEllipsis" />
                 </Border>
                 <TextBlock x:Name="TbStats"
+                           Margin="5, 0, 5, 0"
                            VerticalAlignment="Center"
                            FontSize="16"
                            Foreground="#FFB9B9B9"
@@ -76,6 +77,7 @@
                            HorizontalAlignment="Stretch"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <TextBlock x:Name="TbRequiremenets"
+                           Margin="5, 0, 5, 0"
                            FontSize="16"
                            Foreground="#FFB9B9B9"
                            Text="Requirements"
@@ -88,6 +90,7 @@
                            HorizontalAlignment="Stretch"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <TextBlock x:Name="TbImplicitMod"
+                           Margin="5, 0, 5, 0"
                            VerticalAlignment="Center"
                            FontSize="16"
                            Foreground="#6a88ef"
@@ -101,6 +104,7 @@
                            HorizontalAlignment="Stretch"
                            Fill="{DynamicResource SeparatorGradient}" />
                 <TextBlock x:Name="TbMods"
+                           Margin="5, 0, 5, 0"
                            VerticalAlignment="Center"
                            FontSize="16"
                            Foreground="#6a88ef"
